chrome/browser/ui/app_list/app_context_menu_unittest.cc
@@ -35,7 +35,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/keyed_service/core/keyed_service.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "ui/base/ui_base_features.h"
-#include "ui/views/layout/layout_provider.h"
 
 namespace {
 
@@ -355,11 +354,6 @@ class AppContextMenuTest : public AppListTestBase,
   std::unique_ptr<FakeAppContextMenuDelegate> menu_delegate_;
   std::unique_ptr<FakeAppListModelUpdater> model_updater_;
   base::test::ScopedFeatureList scoped_feature_list_;
-
-  // The layout provider is meant to be a singleton, but it is not initialized
-  // for unit tests. Constructing one here makes it globally available, which
-  // is later used by the menu item during initialization.
-  views::LayoutProvider layout_provider_;
 
   DISALLOW_COPY_AND_ASSIGN(AppContextMenuTest);
 };
